# rkgw

./: .clabot  .env.example  .gitignore  AGENTS.md  CLA.md  CLAUDE.md  CONTRIBUTORS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
.sisyphus/: boulder.json
.sisyphus/notepads/monitoring-dashboard/: decisions.md  issues.md  learnings.md
.sisyphus/plans/: dashboard-fixes.md  monitoring-dashboard.md
benches/: benchmark.rs
docs/: ARCHITECTURE.md
src/: cache.rs  config.rs  error.rs  http_client.rs  lib.rs  main.rs  resolver.rs  thinking_parser.rs  tokenizer.rs  utils.rs
src/auth/: credentials.rs  manager.rs  mod.rs  refresh.rs  types.rs
src/bench/: config.rs  metrics.rs  mock_server.rs  mod.rs  report.rs  runner.rs
src/converters/: anthropic_to_kiro.rs  core.rs  kiro_to_anthropic.rs  kiro_to_openai.rs  mod.rs  openai_to_kiro.rs
src/dashboard/: app.rs  event_handler.rs  log_layer.rs  mod.rs  ui.rs  widgets.rs
src/metrics/: collector.rs  mod.rs
src/middleware/: debug.rs  mod.rs
src/models/: anthropic.rs  kiro.rs  mod.rs  openai.rs
src/routes/: mod.rs
src/streaming/: mod.rs
tests/: integration_test.rs
