[package]
name = "kiro-gateway"
version = "0.2.0"
edition = "2021"
authors = ["Jwadow"]
license = "AGPL-3.0"
description = "Proxy gateway for Kiro API - OpenAI and Anthropic compatible"
repository = "https://github.com/jwadow/kiro-gateway"
readme = "README.md"

[features]
default = []
test-utils = []

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
http-body-util = "0.1"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
dotenvy = "0.15"
config = "0.14"
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Tokenization
tiktoken-rs = "0.5"

# SQLite support
rusqlite = { version = "0.31", features = ["bundled"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
once_cell = "1"
dashmap = "5"
bytes = "1"
dirs = "5"
hostname = "0.4"

# Interactive prompts
dialoguer = "0.11"

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockito = "1"
proptest = "1"
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "kiro-gateway"
path = "src/main.rs"